# openvmm

./: Cargo.toml
.devcontainer/: devcontainer.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
Guide/src/: SUMMARY.md
Guide/src/dev_guide/: pr_management.md
flowey/flowey_lib_hvlite/src/: init_vmm_tests_env.rs  lib.rs  test_nextest_vmm_tests_archive.rs  wpr_session_manager.rs  wpr_tracing.rs
openhcl/hcl/src/: ioctl.rs  protocol.rs  vmsa.rs
openhcl/openhcl_attestation_protocol/src/: vmgs.rs
openhcl/openhcl_boot/src/: hypercall.rs  main.rs
openhcl/openhcl_dma_manager/src/: lib.rs
openhcl/sidecar_client/src/: lib.rs
openhcl/sidecar_defs/src/: lib.rs
openhcl/underhill_attestation/src/: hardware_key_sealing.rs  lib.rs  vmgs.rs
openhcl/underhill_core/src/: nvme_manager.rs  worker.rs
openhcl/underhill_crash/src/: elf.rs  lib.rs
openhcl/virt_mshv_vtl/src/: lib.rs
petri/src/: lib.rs  tracing.rs
petri/src/vm/: mod.rs
repo_support/: README.md  analyze_pr_deps.py  backport_status.py  backport_workflow.py  gen_cherrypick_prs.py  relabel_backported.py  shared_utils.py
repo_support/tests/: conftest.py  test_analyze_pr_deps.py  test_backport_status.py  test_backport_workflow.py  test_gen_cherrypick_prs.py  test_relabel_backported.py  test_shared_utils.py
repo_support/tests/fixtures/: mock_pr_list.json  mock_pr_view.json
specs/001-pr-branch-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pr-branch-tools/checklists/: requirements.md
specs/001-pr-branch-tools/contracts/: analyze-pr-deps.md  backport-status.md  backport-workflow.md  gen-cherrypick-prs.md  relabel-backported.md
support/fdt/src/: builder.rs  parser.rs  spec.rs
support/guid/src/: lib.rs
support/inspect/src/: lib.rs
support/inspect_derive/src/: lib.rs
support/safeatomic/src/: lib.rs
support/sev_guest_device/src/: ioctl.rs  protocol.rs
support/sparse_mmap/src/: lib.rs
support/tdx_guest_device/src/: ioctl.rs  protocol.rs
support/tee_call/src/: lib.rs
support/zerocopy_helpers/src/: lib.rs
vm/acpi/src/: builder.rs  (+1 more)
vm/devices/storage/disk_nvme/: Cargo.toml
vm/devices/storage/disk_nvme/nvme_driver/fuzz/: fuzz_emulated_device.rs  fuzz_nvme_driver.rs
vm/devices/storage/disk_nvme/nvme_driver/src/: driver.rs  namespace.rs  queue_pair.rs  tests.rs
vm/devices/storage/disk_nvme/src/: lib.rs  tests.rs
vm/devices/storage/storvsp/fuzz/: Cargo.toml  fuzz_storvsp.rs
vm/devices/storage/storvsp/fuzz/artifacts/fuzz_storvsp/: timeout-241176832c9bf656f2a88f9d95bea32b243c498a
vm/devices/storage/storvsp_resources/: Cargo.toml
vm/devices/storage/storvsp_resources/src/: lib.rs
vmm_core/src/: acpi_builder.rs
(+256 files in other folders)
