# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "storvsp_resources"
edition = "2021"
rust-version.workspace = true

[dependencies]
arbitrary = { workspace = true, features = ["derive"] }
vm_resource.workspace = true

guid = { workspace = true, features = ["mesh"] }
mesh.workspace = true

[lints]
workspace = true
