# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "fuzz_storvsp"
publish = false
edition = "2021"
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
storvsp.workspace = true
xtask_fuzz.workspace = true
disklayer_ram.workspace = true
scsi_buffers.workspace = true
scsidisk.workspace = true
storvsp_resources.workspace = true

vmbus_async.workspace = true
vmbus_channel.workspace = true
vmbus_ring.workspace = true

guestmem.workspace = true
vmcore.workspace = true

guid.workspace = true
pal_async.workspace = true
parking_lot.workspace = true

zerocopy.workspace = true

arbitrary = { workspace = true, features = ["derive"] }

[target.'cfg(all(target_os = "linux", target_env = "gnu"))'.dependencies]
libfuzzer-sys.workspace = true

[package.metadata.xtask.unused-deps]
# required for the xtask_fuzz macro, but unused_deps doesn't know that
ignored = []

[package.metadata]
cargo-fuzz = true

[package.metadata.xtask.fuzz.onefuzz-allowlist]
fuzz_storvsp = ["**/*.rs", "../src/**/*.rs"]

[[bin]]
name = "fuzz_storvsp"
path = "fuzz_storvsp.rs"
test = false
doc = false
doctest = false

[lints]
workspace = true
